--- a/frontend/src/blocks/header/header.css
+++ b/frontend/src/blocks/header/header.css
@@ -4,6 +4,9 @@
   min-height: 74px;
   border-bottom: 1px solid rgba(84, 84, 84, .7);
   box-sizing: border-box;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
 }
 
 @media screen and (max-width: 950px) {
