--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,20 @@
 @import url(./vendor/normalize.css);
 @import url(./vendor/fonts.css);
 
+@import url(./blocks/link/link.css);
 @import url(./blocks/logo/logo.css);
 @import url(./blocks/page/page.css);
 
 @import url(./blocks/header/header.css);
+@import url(./blocks/header/__navigation/header__navigation.css);
+@import url(./blocks/header/__user-info/header__user-info.css);
+@import url(./blocks/header/__logout-btn/header__logout-btn.css);
+
+@import url(./blocks/form/form.css);
+@import url(./blocks/form/__title/form__title.css);
+@import url(./blocks/form/__input/form__input.css);
+@import url(./blocks/form/__submit-btn/form__submit-btn.css);
+@import url(./blocks/form/__tip/form__tip.css);
 
 @import url(./blocks/content/content.css);
 
@@ -38,6 +48,7 @@
 @import url(./blocks/popup/popup.css);
 @import url(./blocks/popup/_opened/popup_opened.css);
 @import url(./blocks/popup/_darkened/popup_darkened.css);
+@import url(./blocks/popup/__container/popup__container.css);
 @import url(./blocks/popup/__form/popup__form.css);
 @import url(./blocks/popup/__header/popup__header.css);
 @import url(./blocks/popup/__input/popup__input.css);
@@ -49,4 +60,5 @@
 @import url(./blocks/popup/__card-conatiner/popup__card-container.css);
 @import url(./blocks/popup/__card-image/popup__card-image.css);
 @import url(./blocks/popup/__card-caption/popup__card-caption.css);
-
+@import url(./blocks/popup/__status-image/popup__status-image.css);
+@import url(./blocks/popup/__status-title/popup__status-title.css);
